--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "fastify": "^3.4.1",
     "fastify-cors": "^4.1.0",
     "moment": "^2.29.0",
-    "node-persist": "^3.1.0"
+    "node-persist": "^3.1.0",
+    "randexp": "^0.5.3"
   },
   "devDependencies": {
     "pino-pretty": "^4.2.1",
