--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "npm run test"
+    "test": "mocha test/*.test.js"
   },
   "keywords": [
     "url",
@@ -23,7 +23,11 @@
     "randexp": "^0.5.3"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.1.3",
     "pino-pretty": "^4.2.1",
+    "request": "^2.88.2",
     "tap": "^14.10.8"
   }
 }
